Removed fixed bg as buggy on mobile

--- a/style.scss
+++ b/style.scss
@@ -12,16 +12,6 @@
     font-style: normal;
 }
 
-@mixin fixed-cover {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100%;
-}
-
 @mixin bg-cover {
     background-position: center;
     background-repeat: no-repeat;
@@ -48,29 +38,34 @@ p {
 }
 
 .ru-live-video {
-    .page-bg-image {
-        @include fixed-cover;
-        @include bg-cover;
-        z-index: 0;
-    }
-
-    .page-bg-overlay {
-        @include fixed-cover;
-        background-color: rgba(0, 0, 0, 0.4);
-        z-index: 1;
-    }
-
     .main {
+        @include bg-cover;
         align-items: center;
         display: flex;
         justify-content: center;
+        min-height: 100vh;
         position: relative;
-        z-index: 2;
+        z-index: 0;
+
+        &::before {
+            background-color: rgba(0, 0, 0, 0.4);
+            bottom: 0;
+            content: '';
+            left: 0;
+            min-height: 100vh;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 100%;
+            z-index: 1;
+        }
     }
 
     .wrapper {
         padding: 32px 0;
+        position: relative;
         width: 100%;
+        z-index: 2;
     }
 
     .container {
